syntax = "proto3";

package test;

option java_multiple_files = true;

service Greeter{
    rpc sayHello(HelloRequest) returns (HelloReply){}
}

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string message = 1;
}